--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     }
   },
   "dependencies": {
+    "@emotion/react": "^11.11.3",
+    "@emotion/styled": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@commitlint/cli": "^18.4.3",
     "@commitlint/config-conventional": "^18.4.3",
+    "@emotion/eslint-plugin": "^11.11.0",
     "@types/eslint": "^8.56.0",
     "@types/react": "^18.2.43",
     "@types/react-dom": "^18.2.17",
