--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,14 @@
 {
   "compilerOptions": {
+    "baseUrl": "./src",
+    "paths": {
+      "@config/*": ["./lib/config/*"],
+      "@hooks/*": ["./lib/hooks/*"],
+      "@providers/*": ["./lib/providers/*"],
+      "@helpers/*": ["./lib/helpers/*"],
+      "@pages/*": ["./pages/*"],
+      "@components/*": ["./components/*"]
+    },
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
