--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,7 +7,8 @@
       "@providers/*": ["./lib/providers/*"],
       "@helpers/*": ["./lib/helpers/*"],
       "@pages/*": ["./pages/*"],
-      "@components/*": ["./components/*"]
+      "@components/*": ["./components/*"],
+      "@mock/*": ["./lib/mock/*"]
     },
     "target": "ES2020",
     "useDefineForClassFields": true,
